--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring-mvc.xml,classpath:spring-entity.xml</param-value>
+            <param-value>classpath:spring-mvc.xml,classpath:spring-entity.xml,classpath:spring-dao.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
