--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,21 @@
   </dependencies>
   <build>
     <finalName>web_app</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>8.1.16.v20140903</version>
+        <configuration>
+          <scanIntervalSeconds>10</scanIntervalSeconds>
+          <webApp>
+            <contextPath>/webapp</contextPath>
+          </webApp>
+          <stopKey/>
+          <stopPort/>
+        </configuration>
+      </plugin>
+
+    </plugins>
   </build>
 </project>
